--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+@import "minima";
 @import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i');
 
 body {
